style: adjust padding for star list items; align text for tips list; fix HTML structure in module2.html; update image container styling in mod3.css

--- a/mod2.css
+++ b/mod2.css
@@ -61,7 +61,7 @@ ul.star-list {
 ul.star-list li {
     display: block;
     position: relative;
-    padding-left: 1.5em;
+    padding-left: 1.6em;
     margin-bottom: 0.5em;
     text-align: left;
     width: 100%;
@@ -73,4 +73,14 @@ ul.star-list li::before {
     position: absolute;
     left: 0;
     color: gold;
+}
+
+p{
+    text-align: left;
+}
+
+ul.tips-list {
+   
+    text-align: center;
+    
 }
